diosmio-cli/src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCliParser.java
// $ANTLR 3.4 src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g 2012-09-28 18:13:07

package net.alaux.diosmio.cli.antlr;

import net.alaux.diosmio.cli.Main;
import java.text.MessageFormat;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class DiosMioCliParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADD", "ARTIFACT", "CMD_ADD_ARTIFACT", "CMD_ADD_CONFIG", "CMD_DELETE_ARTIFACT", "CMD_DELETE_CONFIG", "CMD_GET_ARTIFACT", "CMD_GET_CONFIG", "CMD_HELP", "CMD_LOAD", "CMD_NO_OP", "CMD_PARSE", "CONFIG", "DELETE", "DIGIT", "FILEPATH", "GET", "HELP", "LOAD", "NUMBER", "PARSE", "WHITESPACE", "WORD"
    };

    public static final int EOF=-1;
    public static final int ADD=4;
    public static final int ARTIFACT=5;
    public static final int CMD_ADD_ARTIFACT=6;
    public static final int CMD_ADD_CONFIG=7;
    public static final int CMD_DELETE_ARTIFACT=8;
    public static final int CMD_DELETE_CONFIG=9;
    public static final int CMD_GET_ARTIFACT=10;
    public static final int CMD_GET_CONFIG=11;
    public static final int CMD_HELP=12;
    public static final int CMD_LOAD=13;
    public static final int CMD_NO_OP=14;
    public static final int CMD_PARSE=15;
    public static final int CONFIG=16;
    public static final int DELETE=17;
    public static final int DIGIT=18;
    public static final int FILEPATH=19;
    public static final int GET=20;
    public static final int HELP=21;
    public static final int LOAD=22;
    public static final int NUMBER=23;
    public static final int PARSE=24;
    public static final int WHITESPACE=25;
    public static final int WORD=26;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public DiosMioCliParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public DiosMioCliParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return DiosMioCliParser.tokenNames; }
    public String getGrammarFileName() { return "src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g"; }


        public void reportError(RecognitionException e) {
            String errorMessage = MessageFormat.format(Main.bundle.getString("error.syntax"), e.charPositionInLine, this.getErrorMessage(e, this.getTokenNames()));
            throw new RuntimeException(errorMessage);
        }


    public static class parse_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "parse"
    // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:61:1: parse : action EOF -> action ;
    public final DiosMioCliParser.parse_return parse() throws RecognitionException {
        DiosMioCliParser.parse_return retval = new DiosMioCliParser.parse_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token EOF2=null;
        DiosMioCliParser.action_return action1 =null;


        CommonTree EOF2_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_action=new RewriteRuleSubtreeStream(adaptor,"rule action");
        try {
            // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:62:5: ( action EOF -> action )
            // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:62:7: action EOF
            {
            pushFollow(FOLLOW_action_in_parse162);
            action1=action();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_action.add(action1.getTree());

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_parse164); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_EOF.add(EOF2);


            // AST REWRITE
            // elements: action
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 63:9: -> action
            {
                adaptor.addChild(root_0, stream_action.nextTree());

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "parse"


    public static class action_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "action"
    // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:66:1: action : ( help | addArtifact | getArtifact | deleteArtifact | addConfig | getConfig | deleteConfig | loadFile | parseFile | -> ^( CMD_NO_OP ) );
    public final DiosMioCliParser.action_return action() throws RecognitionException {
        DiosMioCliParser.action_return retval = new DiosMioCliParser.action_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        DiosMioCliParser.help_return help3 =null;

        DiosMioCliParser.addArtifact_return addArtifact4 =null;

        DiosMioCliParser.getArtifact_return getArtifact5 =null;

        DiosMioCliParser.deleteArtifact_return deleteArtifact6 =null;

        DiosMioCliParser.addConfig_return addConfig7 =null;

        DiosMioCliParser.getConfig_return getConfig8 =null;

        DiosMioCliParser.deleteConfig_return deleteConfig9 =null;

        DiosMioCliParser.loadFile_return loadFile10 =null;

        DiosMioCliParser.parseFile_return parseFile11 =null;



        try {
            // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:67:5: ( help | addArtifact | getArtifact | deleteArtifact | addConfig | getConfig | deleteConfig | loadFile | parseFile | -> ^( CMD_NO_OP ) )
            int alt1=10;
            switch ( input.LA(1) ) {
            case HELP:
                {
                alt1=1;
                }
                break;
            case ADD:
                {
                int LA1_2 = input.LA(2);

                if ( (LA1_2==ARTIFACT) ) {
                    alt1=2;
                }
                else if ( (LA1_2==CONFIG) ) {
                    alt1=5;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 2, input);

                    throw nvae;

                }
                }
                break;
            case GET:
                {
                int LA1_3 = input.LA(2);

                if ( (LA1_3==ARTIFACT) ) {
                    alt1=3;
                }
                else if ( (LA1_3==CONFIG) ) {
                    alt1=6;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 3, input);

                    throw nvae;

                }
                }
                break;
            case DELETE:
                {
                int LA1_4 = input.LA(2);

                if ( (LA1_4==ARTIFACT) ) {
                    alt1=4;
                }
                else if ( (LA1_4==CONFIG) ) {
                    alt1=7;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 1, 4, input);

                    throw nvae;

                }
                }
                break;
            case LOAD:
                {
                alt1=8;
                }
                break;
            case PARSE:
                {
                alt1=9;
                }
                break;
            case EOF:
                {
                alt1=10;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }

            switch (alt1) {
                case 1 :
                    // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:67:7: help
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_help_in_action193);
                    help3=help();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, help3.getTree());

                    }
                    break;
                case 2 :
                    // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:68:7: addArtifact
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_addArtifact_in_action201);
                    addArtifact4=addArtifact();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, addArtifact4.getTree());

                    }
                    break;
                case 3 :
                    // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:69:7: getArtifact
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_getArtifact_in_action209);
                    getArtifact5=getArtifact();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, getArtifact5.getTree());

                    }
                    break;
                case 4 :
                    // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:70:7: deleteArtifact
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_deleteArtifact_in_action217);
                    deleteArtifact6=deleteArtifact();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, deleteArtifact6.getTree());

                    }
                    break;
                case 5 :
                    // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:71:7: addConfig
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_addConfig_in_action225);
                    addConfig7=addConfig();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, addConfig7.getTree());

                    }
                    break;
                case 6 :
                    // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:72:7: getConfig
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_getConfig_in_action233);
                    getConfig8=getConfig();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, getConfig8.getTree());

                    }
                    break;
                case 7 :
                    // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:73:7: deleteConfig
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_deleteConfig_in_action241);
                    deleteConfig9=deleteConfig();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, deleteConfig9.getTree());

                    }
                    break;
                case 8 :
                    // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:74:7: loadFile
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_loadFile_in_action249);
                    loadFile10=loadFile();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, loadFile10.getTree());

                    }
                    break;
                case 9 :
                    // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:75:7: parseFile
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_parseFile_in_action257);
                    parseFile11=parseFile();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, parseFile11.getTree());

                    }
                    break;
                case 10 :
                    // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:76:7: 
                    {
                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {

                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 76:7: -> ^( CMD_NO_OP )
                    {
                        // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:76:10: ^( CMD_NO_OP )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(
                        (CommonTree)adaptor.create(CMD_NO_OP, "CMD_NO_OP")
                        , root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "action"


    public static class help_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "help"
    // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:79:1: help : HELP -> ^( CMD_HELP ) ;
    public final DiosMioCliParser.help_return help() throws RecognitionException {
        DiosMioCliParser.help_return retval = new DiosMioCliParser.help_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token HELP12=null;

        CommonTree HELP12_tree=null;
        RewriteRuleTokenStream stream_HELP=new RewriteRuleTokenStream(adaptor,"token HELP");

        try {
            // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:80:5: ( HELP -> ^( CMD_HELP ) )
            // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:80:7: HELP
            {
            HELP12=(Token)match(input,HELP,FOLLOW_HELP_in_help286); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_HELP.add(HELP12);


            // AST REWRITE
            // elements: 
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 81:9: -> ^( CMD_HELP )
            {
                // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:81:12: ^( CMD_HELP )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(CMD_HELP, "CMD_HELP")
                , root_1);

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "help"


    public static class addArtifact_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "addArtifact"
    // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:85:1: addArtifact : ADD ARTIFACT filepath -> ^( CMD_ADD_ARTIFACT filepath ) ;
    public final DiosMioCliParser.addArtifact_return addArtifact() throws RecognitionException {
        DiosMioCliParser.addArtifact_return retval = new DiosMioCliParser.addArtifact_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token ADD13=null;
        Token ARTIFACT14=null;
        DiosMioCliParser.filepath_return filepath15 =null;


        CommonTree ADD13_tree=null;
        CommonTree ARTIFACT14_tree=null;
        RewriteRuleTokenStream stream_ADD=new RewriteRuleTokenStream(adaptor,"token ADD");
        RewriteRuleTokenStream stream_ARTIFACT=new RewriteRuleTokenStream(adaptor,"token ARTIFACT");
        RewriteRuleSubtreeStream stream_filepath=new RewriteRuleSubtreeStream(adaptor,"rule filepath");
        try {
            // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:86:5: ( ADD ARTIFACT filepath -> ^( CMD_ADD_ARTIFACT filepath ) )
            // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:86:7: ADD ARTIFACT filepath
            {
            ADD13=(Token)match(input,ADD,FOLLOW_ADD_in_addArtifact318); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ADD.add(ADD13);


            ARTIFACT14=(Token)match(input,ARTIFACT,FOLLOW_ARTIFACT_in_addArtifact320); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ARTIFACT.add(ARTIFACT14);


            pushFollow(FOLLOW_filepath_in_addArtifact322);
            filepath15=filepath();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_filepath.add(filepath15.getTree());

            // AST REWRITE
            // elements: filepath
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 87:9: -> ^( CMD_ADD_ARTIFACT filepath )
            {
                // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:87:12: ^( CMD_ADD_ARTIFACT filepath )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(CMD_ADD_ARTIFACT, "CMD_ADD_ARTIFACT")
                , root_1);

                adaptor.addChild(root_1, stream_filepath.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "addArtifact"


    public static class getArtifact_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "getArtifact"
    // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:90:1: getArtifact : GET ARTIFACT ( id )? -> ^( CMD_GET_ARTIFACT ( id )? ) ;
    public final DiosMioCliParser.getArtifact_return getArtifact() throws RecognitionException {
        DiosMioCliParser.getArtifact_return retval = new DiosMioCliParser.getArtifact_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token GET16=null;
        Token ARTIFACT17=null;
        DiosMioCliParser.id_return id18 =null;


        CommonTree GET16_tree=null;
        CommonTree ARTIFACT17_tree=null;
        RewriteRuleTokenStream stream_GET=new RewriteRuleTokenStream(adaptor,"token GET");
        RewriteRuleTokenStream stream_ARTIFACT=new RewriteRuleTokenStream(adaptor,"token ARTIFACT");
        RewriteRuleSubtreeStream stream_id=new RewriteRuleSubtreeStream(adaptor,"rule id");
        try {
            // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:91:5: ( GET ARTIFACT ( id )? -> ^( CMD_GET_ARTIFACT ( id )? ) )
            // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:91:7: GET ARTIFACT ( id )?
            {
            GET16=(Token)match(input,GET,FOLLOW_GET_in_getArtifact355); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_GET.add(GET16);


            ARTIFACT17=(Token)match(input,ARTIFACT,FOLLOW_ARTIFACT_in_getArtifact357); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ARTIFACT.add(ARTIFACT17);


            // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:91:20: ( id )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==NUMBER) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:91:20: id
                    {
                    pushFollow(FOLLOW_id_in_getArtifact359);
                    id18=id();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_id.add(id18.getTree());

                    }
                    break;

            }


            // AST REWRITE
            // elements: id
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 92:9: -> ^( CMD_GET_ARTIFACT ( id )? )
            {
                // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:92:12: ^( CMD_GET_ARTIFACT ( id )? )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(CMD_GET_ARTIFACT, "CMD_GET_ARTIFACT")
                , root_1);

                // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:92:31: ( id )?
                if ( stream_id.hasNext() ) {
                    adaptor.addChild(root_1, stream_id.nextTree());

                }
                stream_id.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "getArtifact"


    public static class deleteArtifact_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "deleteArtifact"
    // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:95:1: deleteArtifact : DELETE ARTIFACT id -> ^( CMD_DELETE_ARTIFACT id ) ;
    public final DiosMioCliParser.deleteArtifact_return deleteArtifact() throws RecognitionException {
        DiosMioCliParser.deleteArtifact_return retval = new DiosMioCliParser.deleteArtifact_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token DELETE19=null;
        Token ARTIFACT20=null;
        DiosMioCliParser.id_return id21 =null;


        CommonTree DELETE19_tree=null;
        CommonTree ARTIFACT20_tree=null;
        RewriteRuleTokenStream stream_DELETE=new RewriteRuleTokenStream(adaptor,"token DELETE");
        RewriteRuleTokenStream stream_ARTIFACT=new RewriteRuleTokenStream(adaptor,"token ARTIFACT");
        RewriteRuleSubtreeStream stream_id=new RewriteRuleSubtreeStream(adaptor,"rule id");
        try {
            // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:96:5: ( DELETE ARTIFACT id -> ^( CMD_DELETE_ARTIFACT id ) )
            // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:96:7: DELETE ARTIFACT id
            {
            DELETE19=(Token)match(input,DELETE,FOLLOW_DELETE_in_deleteArtifact394); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_DELETE.add(DELETE19);


            ARTIFACT20=(Token)match(input,ARTIFACT,FOLLOW_ARTIFACT_in_deleteArtifact396); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ARTIFACT.add(ARTIFACT20);


            pushFollow(FOLLOW_id_in_deleteArtifact398);
            id21=id();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_id.add(id21.getTree());

            // AST REWRITE
            // elements: id
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 97:9: -> ^( CMD_DELETE_ARTIFACT id )
            {
                // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:97:12: ^( CMD_DELETE_ARTIFACT id )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(CMD_DELETE_ARTIFACT, "CMD_DELETE_ARTIFACT")
                , root_1);

                adaptor.addChild(root_1, stream_id.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "deleteArtifact"


    public static class addConfig_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "addConfig"
    // src/main/java/net/alaux/diosmio/cli/antlr/DiosMioCli.g:101:1: addConfig : ADD CONFIG hostname sshPort sshUser -> ^( CMD_ADD_CONFIG hostname sshPort sshUser ) ;
    public final DiosMioCliParser.addConfig_return addConfig() throws RecognitionException {
        DiosMioCliParser.addConfig_return retval = new DiosMioCliParser.addConfig_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token ADD22=null;
        Token CONFIG23=null;
        DiosMioCliParser.hostname_return hostname24 =null;

        DiosMioCliParser.sshPort_return sshPort25 =null;

        DiosMioCliParser.sshUser_return sshUser26 =null;

